[tool.poetry]
name = "reinforcement-learning-an-introduction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "reinforcement_learning_an_introduction"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
tqdm = "^4.66.2"
scipy = "^1.12.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
